scrollbar fix

--- a/app/scss/base/_globals.scss
+++ b/app/scss/base/_globals.scss
@@ -23,8 +23,7 @@
 }
 
 html {
-  font-family: Inter, sans-serif, Roboto, sans-serif;
-  background-color: #fff;
+  height: 100%;
   scroll-behavior: smooth;
   scroll-padding-top: 6rem;
 
@@ -34,7 +33,11 @@ html {
 }
 
 body {
+  height: 100%;
   margin: 0;
+  overflow: hidden;
+  background-color: var(--blue-gray-50);
+  font-family: Inter, sans-serif, Roboto, sans-serif;
 }
 
 h2 {
